Bug 410765 – 'List all tabs' button on tabs not working in AT-SPI, r=MarcoZ, Olli.Pettay, aaronlev, sr=roc